NOJIRA: FindBugs fixes.